contrast fixes #380

--- a/resources/assets/sass/components/common/_sidebar.scss
+++ b/resources/assets/sass/components/common/_sidebar.scss
@@ -54,6 +54,7 @@
 
         .sidebar-button {
             @extend %gradient--vertical;
+            background-color: $palette--black;
             border: none;
             border-radius: 5px;
             box-shadow: none;
